force-app/main/default/objects/Work_Order_Job_Line_Item__c/Work_Order_Job_Line_Item__c.object-meta.xml
<CustomObject>
    <label>Work Order Job Line Item</label>
    <nameField>
        <displayFormat>WJL-{000}</displayFormat>
        <label>Work Order Job Line Item Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Work Order Job Line Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>