force-app/main/default/objects/Work_Order_Job_Line_Item__c/fields/Part__c.field-meta.xml
<CustomField>
    <fullName>Part__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Part</label>
    <referenceTo>Part__c</referenceTo>
    <relationshipLabel>Work Order Job Line Items</relationshipLabel>
    <relationshipName>Work_Order_Job_Line_Items</relationshipName>
    <type>Lookup</type>
</CustomField>