force-app/main/default/objects/Work_Order_Job_Line_Item__c/fields/Related_to_Job__c.field-meta.xml
<CustomField>
    <fullName>Related_to_Job__c</fullName>
    <label>Related to Job</label>
    <referenceTo>Work_Order_Job__c</referenceTo>
    <relationshipLabel>Work Order Job Line Items</relationshipLabel>
    <relationshipName>Work_Order_Job_Line_Items</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>