force-app/main/default/objects/Work_Order_Job_Line_Item__c/fields/Select_Part__c.field-meta.xml
<CustomField>
    <fullName>Select_Part__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Select Part</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Inventory__c.RecordType.Name</field>
            <operation>equals</operation>
            <value>Inventory for Parts</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Inventory__c</referenceTo>
    <relationshipLabel>Work Order Job Line Items</relationshipLabel>
    <relationshipName>Work_Order_Job_Line_Items</relationshipName>
    <type>Lookup</type>
</CustomField>