force-app/main/default/objects/Work_Order_Job_Line_Item__c/fields/Store_Location__c.field-meta.xml
<CustomField>
    <fullName>Store_Location__c</fullName>
    <formula>Related_to_Job__r.Store_Location__c</formula>
    <label>Store Location</label>
    <type>Text</type>
</CustomField>