force-app/main/default/objects/Work_Order_Job_Line_Item__c/fields/Work_Order_Record_Type__c.field-meta.xml
<CustomField>
    <fullName>Work_Order_Record_Type__c</fullName>
    <formula>Related_to_Job__r.Work_Order_Warranty_Work_Order__r.RecordType.DeveloperName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Work Order Record Type</label>
    <type>Text</type>
</CustomField>